<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg_head_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_head_login" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/icon_logo" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black_2E2E2E"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mAccountEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/icon_account"
        android:drawablePadding="5dp"
        android:hint="@string/pls_input_account_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:outlineSpotShadowColor="@color/red_FF5544"
        android:paddingBottom="20dp"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/mPasswordEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/icon_password"
        android:drawableRight="@drawable/icon_eyes_close"
        android:drawablePadding="5dp"
        android:hint="@string/pls_input_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:outlineSpotShadowColor="@color/red_FF5544"
        android:paddingBottom="20dp"
        android:textSize="14dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mErrorMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/red_FF5544"
            android:textSize="14dp"
            tools:text="密码错误" />

        <TextView
            android:id="@+id/mForgotTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/green_3EAB73"
            android:textSize="14dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/mLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/shape_btn_green"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16dp" />
</LinearLayout>