<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.asto.a91recyclingtreasure.widget.HeadView
        android:id="@+id/mHeadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:show_right="visible" />

    <TextView
        android:id="@+id/mCountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mHeadView"
        android:layout_marginLeft="60dp"
        android:textColor="@color/gray_B2B2B2"
        android:textSize="@dimen/text_small" />

    <View
        android:id="@+id/mLineV"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mCountTv"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:background="@color/black_10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mSubLl"
        android:layout_below="@+id/mLineV" />

    <LinearLayout
        android:id="@+id/mSubLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_bg_submit"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <RelativeLayout
                android:id="@+id/mActualPriceRl"
                android:layout_width="match_parent"
                android:layout_height="24dp">

                <TextView
                    android:id="@+id/mActualPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="right|center_vertical"
                    android:background="#00000000"
                    android:minWidth="1dp"
                    android:textColor="@color/green_3EAB73"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/mActualPriceTv"
                    android:text="￥ "
                    android:textColor="@color/green_3EAB73"
                    android:textSize="@dimen/text_normal" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mMergerReviewBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/selector_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/merger_review"
                android:textColor="@color/black_60" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/merger_review_msg"
                android:textColor="@color/black_30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mAuditPaymentBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/selector_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/audit_payment"
                android:textColor="@color/black_60" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/audit_payment_msg"
                android:textColor="@color/black_30" />

        </LinearLayout>

        <Button
            android:id="@+id/mSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_btn_green"
            android:padding="15dp"
            android:text="@string/settle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big" />
    </LinearLayout>

</RelativeLayout>